<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".presentation.view.DetailsFragment">

        <ImageView
            android:id="@+id/ivFlagsImage"
            android:layout_width="250dp"
            android:layout_height="150dp"
            android:layout_marginHorizontal="8dp"
            android:layout_marginVertical="8dp"
            android:scaleType="fitXY"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:background="@drawable/unavailable_image" />

        <TextView
            android:id="@+id/tvCommonName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:textSize="32sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ivFlagsImage"
            tools:text="Germany" />

        <TextView
            android:id="@+id/tvOfficialTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/official_name_title"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvCommonName" />

        <TextView
            android:id="@+id/tvOfficialName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:singleLine="true"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvOfficialTitle"
            tools:text="Federal Republic of Germany" />

        <TextView
            android:id="@+id/tvNativeTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/native_name_title"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvOfficialName" />

        <TextView
            android:id="@+id/tvNativeName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:singleLine="true"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvNativeTitle"
            tools:text="Deutschland" />

        <TextView
            android:id="@+id/tvCapitalTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/capital_title"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvNativeName" />

        <TextView
            android:id="@+id/tvCapitalName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:singleLine="true"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvCapitalTitle"
            tools:text="Berlin" />

        <TextView
            android:id="@+id/tvRegionTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/region_title"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvCapitalName" />

        <TextView
            android:id="@+id/tvRegionName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:singleLine="true"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvRegionTitle"
            tools:text="Europe" />

        <TextView
            android:id="@+id/tvTimezoneTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/timezone_title"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvRegionName" />

        <TextView
            android:id="@+id/tvTimezoneName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:singleLine="true"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvTimezoneTitle"
            tools:text="UTC+01:00" />

        <TextView
            android:id="@+id/tvCOATitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/coat_of_arms_title"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvTimezoneName" />

        <ImageView
            android:id="@+id/ivCOAImage"
            android:layout_width="250dp"
            android:layout_height="150dp"
            android:layout_marginHorizontal="8dp"
            android:layout_marginVertical="8dp"
            android:scaleType="fitXY"
            app:layout_constraintBottom_toTopOf="@+id/btnSave"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvCOATitle"
            tools:background="@drawable/unavailable_image" />

        <Button
            android:id="@+id/btnSave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:text="@string/_save"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
