<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp">

        <ImageView
            android:id="@+id/ivFlagsImage"
            android:layout_width="150dp"
            android:layout_height="100dp"
            android:layout_marginHorizontal="8dp"
            android:layout_marginVertical="8dp"
            android:scaleType="fitXY"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:background="@drawable/unavailable_image" />

        <TextView
            android:id="@+id/tvCommonTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/common_name_title"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/ivFlagsImage"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/ivCommonName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:singleLine="true"
            app:layout_constraintStart_toEndOf="@+id/ivFlagsImage"
            app:layout_constraintTop_toBottomOf="@+id/tvCommonTitle"
            tools:text="Germany" />

        <TextView
            android:id="@+id/tvOfficialTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/official_name_title"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/ivFlagsImage"
            app:layout_constraintTop_toBottomOf="@+id/ivCommonName" />

        <TextView
            android:id="@+id/tvOfficialName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:singleLine="true"
            app:layout_constraintStart_toEndOf="@+id/ivFlagsImage"
            app:layout_constraintTop_toBottomOf="@+id/tvOfficialTitle"
            tools:text="Federal Republic of Germany" />

        <TextView
            android:id="@+id/tvNativeTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/native_name_title"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/ivFlagsImage"
            app:layout_constraintTop_toBottomOf="@+id/tvOfficialName" />

        <TextView
            android:id="@+id/tvNativeName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:singleLine="true"
            app:layout_constraintStart_toEndOf="@+id/ivFlagsImage"
            app:layout_constraintTop_toBottomOf="@+id/tvNativeTitle"
            tools:text="Deutschland" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
